--- a/pkg.info/package.json
+++ b/pkg.info/package.json
@@ -157,7 +157,12 @@
     }
   },
   "publish": {
-    "current": null,
+    "current": {
+      "comment": "Update the Model Point (i.e. Cpl::Dm) implementation to have a small FLASH footprint; Minor feature enhancements and bug fixes",
+      "version": "1.1.0",
+      "date": "Tue May 31 20:49:15 2022",
+      "timestamp": 1654030155
+    },
     "history": []
   }
 }
