--- a/pkg.info/package.json
+++ b/pkg.info/package.json
@@ -158,12 +158,19 @@
   },
   "publish": {
     "current": {
-      "comment": "Address compiler warning issues. Update the linux env.sh script to support setting a path to the GCC toolchain",
-      "version": "2.0.0",
-      "date": "Sat Jul  9 23:47:35 2022",
-      "timestamp": 1657410455
+      "comment": "Minor refactoring, bug fixes, and latest Outcast package updates",
+      "version": "2.0.1",
+      "date": "Sun Sep 11 23:28:04 2022",
+      "timestamp": 1662938884,
+      "changes": "\"- Refactor the top level 'Main' files to support port the Thermostat to other platforms (e.g. PI Pico)\\n- Refactor the Algorithm class to NOT be runnable object (i.e. a dedicated thread is not needed for processing rate of 0.5Hz)\\n- Fix Fan continuous bug where Fan Cont. operation did not work when the Thermostat is in the OFF mode\\n- Fix bug in the missing 'blocking' argument for the frame decoders\\n- Fix issue of the Cpl::Io::Stream available() method reporting  mouse/focus events for stdin under Windoze\\n- Get the latest package version of: nqbp, colony.*\\n\""
     },
     "history": [
+      {
+        "comment": "Address compiler warning issues. Update the linux env.sh script to support setting a path to the GCC toolchain",
+        "version": "2.0.0",
+        "date": "Sat Jul  9 23:47:35 2022",
+        "timestamp": 1657410455
+      },
       {
         "comment": "Fix package dependency error",
         "version": "1.1.1",
