adopt the pico-sdk package

--- a/pkg.info/package.json
+++ b/pkg.info/package.json
@@ -82,6 +82,23 @@
           "type": "git",
           "origin": "https://github.com/johnttaylor"
         }
+      },
+      {
+        "pkgname": "pico-sdk",
+        "pkgtype": "readonly",
+        "virtualAdoption": false,
+        "adoptedDate": "Sun Feb 19 14:47:26 2023",
+        "parentDir": "xsrc",
+        "version": {
+          "semanticVersion": "1.4.0",
+          "branch": null,
+          "tag": "OUTCAST2-main-1.4.0"
+        },
+        "repo": {
+          "name": "pico-sdk",
+          "type": "git",
+          "origin": "https://github.com/johnttaylor"
+        }
       }
     ],
     "weak": [
