update to latest colony.* package (that are now using nqbp2)

--- a/pkgs.overlaid/colony.apps/pkg.info/package.json
+++ b/pkgs.overlaid/colony.apps/pkg.info/package.json
@@ -36,12 +36,13 @@
       {
         "pkgname": "colony.core",
         "pkgtype": "overlay",
-        "adoptedDate": "Sat Dec 24 15:26:41 2022",
+        "virtualAdoption": false,
+        "adoptedDate": "Fri Feb 24 18:47:00 2023",
         "parentDir": null,
         "version": {
-          "semanticVersion": "4.3.0",
+          "semanticVersion": "4.3.4",
           "branch": null,
-          "tag": "OUTCAST2-main-4.3.0"
+          "tag": "OUTCAST2-main-4.3.4"
         },
         "repo": {
           "name": "colony.core",
@@ -98,6 +99,23 @@
           "type": "git",
           "origin": "https://github.com/johnttaylor"
         }
+      },
+      {
+        "pkgname": "nqbp2",
+        "pkgtype": "readonly",
+        "virtualAdoption": false,
+        "adoptedDate": "Fri Feb 24 18:39:39 2023",
+        "parentDir": "xsrc",
+        "version": {
+          "semanticVersion": "0.1.1",
+          "branch": null,
+          "tag": "OUTCAST2-main-0.1.1"
+        },
+        "repo": {
+          "name": "nqbp2",
+          "type": "git",
+          "origin": "https://github.com/johnttaylor"
+        }
       }
     ]
   },
@@ -126,13 +144,20 @@
   },
   "publish": {
     "current": {
-      "comment": "Pickup latest colony.core package/changes and refactor Storm MPs for the Cpl::Dm changes",
-      "version": "2.1.0",
-      "date": "Sat Dec 24 15:35:08 2022",
-      "timestamp": 1671896108,
+      "comment": "Switch over to NQBP2 and pickup latest colony.core",
+      "version": "2.1.1",
+      "date": "Fri Feb 24 01:43:03 2023",
+      "timestamp": 1677202983,
       "changes": null
     },
     "history": [
+      {
+        "comment": "Pickup latest colony.core package/changes and refactor Storm MPs for the Cpl::Dm changes",
+        "version": "2.1.0",
+        "date": "Sat Dec 24 15:35:08 2022",
+        "timestamp": 1671896108,
+        "changes": null
+      },
       {
         "comment": "Minor bug fixing and picking up latest OUTCAST packages",
         "version": "2.0.4",
