--- a/pkgs.overlaid/colony.arduino/pkg.info/package.json
+++ b/pkgs.overlaid/colony.arduino/pkg.info/package.json
@@ -20,12 +20,13 @@
       {
         "pkgname": "colony.core",
         "pkgtype": "overlay",
-        "adoptedDate": "Sun Sep 11 22:49:03 2022",
+        "virtualAdoption": false,
+        "adoptedDate": "Fri Feb 24 01:46:53 2023",
         "parentDir": null,
         "version": {
-          "semanticVersion": "4.2.1",
+          "semanticVersion": "4.3.4",
           "branch": null,
-          "tag": "OUTCAST2-main-4.2.1"
+          "tag": "OUTCAST2-main-4.3.4"
         },
         "repo": {
           "name": "colony.core",
@@ -66,6 +67,23 @@
           "type": "git",
           "origin": "https://github.com/johnttaylor"
         }
+      },
+      {
+        "pkgname": "nqbp2",
+        "pkgtype": "readonly",
+        "virtualAdoption": false,
+        "adoptedDate": "Fri Feb 24 18:41:25 2023",
+        "parentDir": "xsrc",
+        "version": {
+          "semanticVersion": "0.1.1",
+          "branch": null,
+          "tag": "OUTCAST2-main-0.1.1"
+        },
+        "repo": {
+          "name": "nqbp2",
+          "type": "git",
+          "origin": "https://github.com/johnttaylor"
+        }
       }
     ]
   },
@@ -95,13 +113,20 @@
   },
   "publish": {
     "current": {
-      "comment": "Clean-up TShell command (no functionality changes)",
-      "version": "1.0.6",
-      "date": "Sun Jan 15 21:12:02 2023",
-      "timestamp": 1673817122,
+      "comment": "Update to NQBP2 and latest colony.core",
+      "version": "1.0.7",
+      "date": "Fri Feb 24 02:02:25 2023",
+      "timestamp": 1677204145,
       "changes": null
     },
     "history": [
+      {
+        "comment": "Clean-up TShell command (no functionality changes)",
+        "version": "1.0.6",
+        "date": "Sun Jan 15 21:12:02 2023",
+        "timestamp": 1673817122,
+        "changes": null
+      },
       {
         "comment": "Update to the latest package version",
         "version": "1.0.5",
