--- a/pkgs.overlaid/colony.pico/pkg.info/package.json
+++ b/pkgs.overlaid/colony.pico/pkg.info/package.json
@@ -34,22 +34,6 @@
         }
       },
       {
-        "pkgname": "nqbp",
-        "pkgtype": "foreign",
-        "adoptedDate": "Sun Sep 11 23:36:12 2022",
-        "parentDir": "xsrc",
-        "version": {
-          "semanticVersion": "3.0.1",
-          "branch": null,
-          "tag": "OUTCAST2-main-3.0.1"
-        },
-        "repo": {
-          "name": "nqbp",
-          "type": "git",
-          "origin": "https://github.com/johnttaylor"
-        }
-      },
-      {
         "pkgname": "colony.bsp",
         "pkgtype": "overlay",
         "adoptedDate": "Sun Sep 11 23:47:15 2022",
@@ -66,34 +50,35 @@
         }
       },
       {
-        "pkgname": "colony.apps",
+        "pkgname": "colony.core",
         "pkgtype": "overlay",
-        "adoptedDate": "Sat Dec 24 15:39:44 2022",
+        "virtualAdoption": false,
+        "adoptedDate": "Fri Feb 24 18:43:35 2023",
         "parentDir": null,
         "version": {
-          "semanticVersion": "2.1.0",
+          "semanticVersion": "4.3.4",
           "branch": null,
-          "tag": "OUTCAST2-main-2.1.0"
+          "tag": "OUTCAST2-main-4.3.4"
         },
         "repo": {
-          "name": "colony.apps",
+          "name": "colony.core",
           "type": "git",
           "origin": "https://github.com/johnttaylor"
         }
       },
       {
-        "pkgname": "colony.core",
+        "pkgname": "colony.apps",
         "pkgtype": "overlay",
         "virtualAdoption": false,
-        "adoptedDate": "Sun Feb 19 14:23:05 2023",
+        "adoptedDate": "Fri Feb 24 18:53:11 2023",
         "parentDir": null,
         "version": {
-          "semanticVersion": "4.3.3",
+          "semanticVersion": "2.1.1",
           "branch": null,
-          "tag": "OUTCAST2-main-4.3.3"
+          "tag": "OUTCAST2-main-2.1.1"
         },
         "repo": {
-          "name": "colony.core",
+          "name": "colony.apps",
           "type": "git",
           "origin": "https://github.com/johnttaylor"
         }
@@ -148,6 +133,39 @@
           "type": "git",
           "origin": "https://github.com/johnttaylor"
         }
+      },
+      {
+        "pkgname": "nqbp2",
+        "pkgtype": "readonly",
+        "virtualAdoption": false,
+        "adoptedDate": "Fri Feb 24 18:54:04 2023",
+        "parentDir": "xsrc",
+        "version": {
+          "semanticVersion": "0.1.1",
+          "branch": null,
+          "tag": "OUTCAST2-main-0.1.1"
+        },
+        "repo": {
+          "name": "nqbp2",
+          "type": "git",
+          "origin": "https://github.com/johnttaylor"
+        }
+      },
+      {
+        "pkgname": "nqbp",
+        "pkgtype": "foreign",
+        "adoptedDate": "Sun Sep 11 23:36:12 2022",
+        "parentDir": "xsrc",
+        "version": {
+          "semanticVersion": "3.0.1",
+          "branch": null,
+          "tag": "OUTCAST2-main-3.0.1"
+        },
+        "repo": {
+          "name": "nqbp",
+          "type": "git",
+          "origin": "https://github.com/johnttaylor"
+        }
       }
     ]
   },
@@ -176,13 +194,20 @@
   },
   "publish": {
     "current": {
-      "comment": "Latest CPL updates. Updates to RP2040 OSAL (for ElapsedTime)",
-      "version": "0.2.0",
-      "date": "Sun Feb 19 14:33:39 2023",
-      "timestamp": 1676817219,
+      "comment": "Switch to using NQBP2 and latest get latest colony.core package",
+      "version": "0.2.1",
+      "date": "Fri Feb 24 19:01:08 2023",
+      "timestamp": 1677265268,
       "changes": null
     },
     "history": [
+      {
+        "comment": "Latest CPL updates. Updates to RP2040 OSAL (for ElapsedTime)",
+        "version": "0.2.0",
+        "date": "Sun Feb 19 14:33:39 2023",
+        "timestamp": 1676817219,
+        "changes": null
+      },
       {
         "comment": "Initial published package version",
         "version": "0.1.0",
